force-app/main/default/objects/Waiver__c/Waiver__c.object-meta.xml
<CustomObject>
    <label>Waiver</label>
    <nameField>
        <displayFormat>WV-{00000000}</displayFormat>
        <label>Waiver Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>