force-app/main/default/objects/Waiver__c/fields/Approved_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Id__c</fullName>
    <label>Approved By Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>