force-app/main/default/objects/Waiver__c/fields/ATI_Job__c.field-meta.xml
<CustomField>
    <fullName>ATI_Job__c</fullName>
    <label>ATI Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Waivers</relationshipLabel>
    <relationshipName>Waivers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>