force-app/main/default/objects/Waiver__c/fields/Balance_Owing_Amt__c.field-meta.xml
<CustomField>
    <fullName>Balance_Owing_Amt__c</fullName>
    <description>Balance owing amount appears on the new letter and edit VisualForce pages.</description>
    <label>Balance Owing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>