force-app/main/default/objects/Waiver__c/fields/Bill_To_Attention__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Attention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bill to Attention Contact lookup field set via code from the related Invoice record. Used in Waiver VF page to display the contact with the option to change it. Also used in Conga Composer button code and email templates to send the waiver to this contact via email.</description>
    <label>Bill To Attention</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Waivers</relationshipLabel>
    <relationshipName>Waivers</relationshipName>
    <type>Lookup</type>
</CustomField>