force-app/main/default/objects/Waiver__c/fields/Bill_To_Attention_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Attention_Email__c</fullName>
    <description>Bill to Attention formula field pulled from &apos;Bill to Attention&apos; contact lookup field to display on Waiver VF page.  This email address will be used to send the Waiver PDF email.</description>
    <formula>Bill_To_Attention__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Attention Email</label>
    <type>Text</type>
</CustomField>