force-app/main/default/objects/Waiver__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <description>Billing Address field populated from the related Job via code. Appears on the new letter and edit VisualForce pages.</description>
    <label>Billing Address</label>
    <type>TextArea</type>
</CustomField>