force-app/main/default/objects/Waiver__c/fields/Care_Of__c.field-meta.xml
<CustomField>
    <fullName>Care_Of__c</fullName>
    <description>Care Of field populated via code from the related invoice Care Of field. This is used on the Letter VF page to display with the option to change. Also, populated onto Conga Composer 30, 60, 10 Day Letter templates.</description>
    <label>Care Of</label>
    <length>50</length>
    <type>Text</type>
</CustomField>