force-app/main/default/objects/Waiver__c/fields/Care_Of_Address__c.field-meta.xml
<CustomField>
    <fullName>Care_Of_Address__c</fullName>
    <description>Field populated via code from associated Invoice, if populated. Used in Letter VF page to display with the option to change. Also used in 30, 60, 10 day Letter Conga Composer templates.</description>
    <label>Care Of Address</label>
    <type>TextArea</type>
</CustomField>