force-app/main/default/objects/Waiver__c/fields/Change_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Change_Customer_Name__c</fullName>
    <inlineHelpText>If current customer is not listed correctly, enter a name here.</inlineHelpText>
    <label>Change Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>