force-app/main/default/objects/Waiver__c/fields/Check_Amount__c.field-meta.xml
<CustomField>
    <fullName>Check_Amount__c</fullName>
    <description>The waiver check amount field displayed on the waiver edit VisualForce page</description>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>