force-app/main/default/objects/Waiver__c/fields/Conga_URL__c.field-meta.xml
<CustomField>
    <fullName>Conga_URL__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?serverUrl=API.Partner_Server_URL_290&amp;Id=&quot; &amp; Id 
&amp; &quot;&amp;TemplateId=&quot;
&amp; CASE(Waiver_Or_Letter_Type__c , &quot;Conditional Final Waiver&quot;, &quot;a2f70000000TSz2&quot;, &quot;Conditional Progress Waiver&quot;, &quot;a2f70000000TSyx&quot;, &quot;Unconditional Final Waiver&quot;, &quot;a2f70000000TSzC&quot;, &quot;Unconditional Progress Waiver&quot;, &quot;a2f70000000TSz7&quot;, &quot;&quot;) 
&amp; &quot;,{QVAR1}&amp;DS7Preview=1&amp;DS7=&quot; 
&amp; IF(ISPICKVAL(Delivery_Method__c,&quot;Email&quot;),&quot;2&quot;,&quot;1&quot;)
&amp; &quot;&amp;FP0=1&amp;DS4=1&amp;DS3=1&amp;EmailToId=&quot;
&amp; Bill_To_Attention__c 
&amp; &quot;&amp;EmailSubject=Lien+Release&amp;EmailReplyToId&quot;
&amp; $User.Id
&amp; &quot;&amp;EmailTemplateId=00X70000001vHOr&amp;PS3=0&amp;UF0=1&amp;MFTS0=Final__c&amp;MFTSValue0=True&amp;&quot;
&amp; IF(ISPICKVAL(Delivery_Method__c,&quot;Email&quot;),&quot;2&quot;,&quot;1&quot;) 
&amp; &quot;&amp;AC0=1&amp;SC0=1&amp;LGParentId=&quot; &amp; ATI_Job__c 
&amp; &quot;&amp;AC1=&quot;
&amp; IF(ISPICKVAL(Delivery_Method__c,&quot;Email&quot;),&quot;Email+:+Lien+Release &quot;,&quot;Mail+:+Lien+Release&quot;)
&amp; &quot;&amp;OFN={Template.Label}&quot;
&amp; &quot;_&quot; + Invoice__c + &quot;_FINAL_&quot; + TEXT(YEAR(TODAY())) + &quot;-&quot; + TEXT(MONTH(TODAY())) + &quot;-&quot; &amp; TEXT(DAY(TODAY()))
&amp; &quot;&amp;AttachmentParentId=&quot;
&amp; ATI_Job__c
&amp; &quot;&amp;QVAR0ID=a2X70000000L3pg&amp;QVAR1ID=a2X70000000L3pl?pv0={QVAR0}~pv1=&quot;
&amp; Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga URL</label>
    <type>Text</type>
</CustomField>