force-app/main/default/objects/Waiver__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Invoice Bill To field populated by code and displayed on the waiver edit VisualForce page</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Waivers</relationshipLabel>
    <relationshipName>Waivers</relationshipName>
    <type>Lookup</type>
</CustomField>