force-app/main/default/objects/Waiver__c/fields/Customer_Name_Logic__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Logic__c</fullName>
    <description>Determines which field (Customer or Change Customer Name) will be listed on the PDF.</description>
    <formula>IF(Change_Customer_Name__c != null, Change_Customer_Name__c, IF (Customer__r.Name != null, Customer__r.Name ,    Customer__r.PersonContact.FirstName &amp; &quot; &quot; &amp;  Customer__r.PersonContact.LastName ))</formula>
    <label>Customer Name Logic</label>
    <type>Text</type>
</CustomField>