force-app/main/default/objects/Waiver__c/fields/Date_Time_Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Submitted_for_Approval__c</fullName>
    <description>Field that is time stamped during approval process for Unconditional Waivers</description>
    <label>Date/Time Submitted for Approval</label>
    <type>DateTime</type>
</CustomField>