force-app/main/default/objects/Waiver__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <description>Field used with Conga Merge to decide whether a email should be sent on the generation of the PDF.</description>
    <inlineHelpText>Selecting Email will allow you to auto send an email to the customer with the document as an attachment.</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>