force-app/main/default/objects/Waiver__c/fields/Exception_Date_Waiver_Release__c.field-meta.xml
<CustomField>
    <fullName>Exception_Date_Waiver_Release__c</fullName>
    <description>The list of exception release dates displayed on the waiver edit VisualForce page and entered by the users</description>
    <label>Dates of Previous Unpaid Waivers</label>
    <type>TextArea</type>
</CustomField>