force-app/main/default/objects/Waiver__c/fields/Exception_Extras_Disputed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Exception_Extras_Disputed_Amount__c</fullName>
    <description>The Disputed Claims Amount field displayed on the waiver edit VisualForce page</description>
    <label>Disputed Claims Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>