force-app/main/default/objects/Waiver__c/fields/Exception_Unaffected__c.field-meta.xml
<CustomField>
    <fullName>Exception_Unaffected__c</fullName>
    <description>The Exceptions field displayed on the waiver edit VisualForce page</description>
    <label>Exceptions</label>
    <type>TextArea</type>
</CustomField>