force-app/main/default/objects/Waiver__c/fields/Exception_Unpaid_Progress_Pymt_Amt__c.field-meta.xml
<CustomField>
    <fullName>Exception_Unpaid_Progress_Pymt_Amt__c</fullName>
    <description>The Amount of Unpaid Progress Invoices field displayed on the waiver edit VisualForce page</description>
    <label>Amount of Unpaid Progress Invoices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>