force-app/main/default/objects/Waiver__c/fields/Final__c.field-meta.xml
<CustomField>
    <fullName>Final__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for unconditional waivers in the approval process.</description>
    <label>Final</label>
    <type>Checkbox</type>
</CustomField>