force-app/main/default/objects/Waiver__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Invoice record related to the waiver or letter. Populated by code and displayed on the waiver edit VisualForce page</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Waivers</relationshipLabel>
    <relationshipName>Waivers</relationshipName>
    <type>Lookup</type>
</CustomField>