force-app/main/default/objects/Waiver__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master Detail to the parent Job for the waiver or letter.</description>
    <label>Job</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Waivers</relationshipLabel>
    <relationshipName>Waivers</relationshipName>
    <type>Lookup</type>
</CustomField>