force-app/main/default/objects/Waiver__c/fields/Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Location__c</fullName>
    <description>Project Site Address field populated from the related Job via code. Appears on the new waiver and edit VisualForce pages.</description>
    <label>Job Location</label>
    <type>TextArea</type>
</CustomField>