force-app/main/default/objects/Waiver__c/fields/Letter_Address__c.field-meta.xml
<CustomField>
    <fullName>Letter_Address__c</fullName>
    <formula>IF(Care_Of_Address__c=&quot;&quot;, Billing_Address__c ,Care_Of_Address__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter Address</label>
    <type>Text</type>
</CustomField>