force-app/main/default/objects/Waiver__c/fields/LetterURL__c.field-meta.xml
<CustomField>
    <fullName>LetterURL__c</fullName>
    <formula>&quot;/Waiver__c.Id/e?clone=1&amp;00N70000003XGMA= &amp;RecordType=01270000000UQ0V&amp;01270000000UQ0W=0&amp;retURL=Waiver__c.Id&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LetterURL</label>
    <type>Text</type>
</CustomField>