force-app/main/default/objects/Waiver__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <description>Payment Due Date appears on the new letter and edit VisualForce pages.</description>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>