force-app/main/default/objects/Waiver__c/fields/Received_Progress_Pymt_Amt__c.field-meta.xml
<CustomField>
    <fullName>Received_Progress_Pymt_Amt__c</fullName>
    <description>The Progress Payment Amount displayed on the waiver edit VisualForce page</description>
    <label>Progress Payment Amounts Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>