force-app/main/default/objects/Waiver__c/fields/Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Signature_Date__c</fullName>
    <description>Date the signature is applied to the waiver.</description>
    <label>Signature Date</label>
    <type>Date</type>
</CustomField>