force-app/main/default/objects/Waiver__c/fields/Signature_Image__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image__c</fullName>
    <formula>IF(NOT(ISBLANK(User_Signature__r.Signature_Image_URL__c)),IMAGE( User_Signature__r.Signature_Image_URL__c, User_Signature__c, 80, 200), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Image</label>
    <type>Text</type>
</CustomField>