force-app/main/default/objects/Waiver__c/fields/Signature_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image_URL__c</fullName>
    <formula>User_Signature__r.Signature_Image_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Image URL</label>
    <type>Text</type>
</CustomField>