force-app/main/default/objects/Waiver__c/fields/Signature_Title__c.field-meta.xml
<CustomField>
    <fullName>Signature_Title__c</fullName>
    <formula>User_Signature__r.FirstName + &apos; &apos; + User_Signature__r.LastName + &apos;, &apos; + User_Signature__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Title</label>
    <type>Text</type>
</CustomField>