force-app/main/default/objects/Waiver__c/fields/Through_Date__c.field-meta.xml
<CustomField>
    <fullName>Through_Date__c</fullName>
    <description>The Invoice Due Date field populated by code and displayed on the waiver edit VisualForce page</description>
    <label>Progress Through Date</label>
    <type>Date</type>
</CustomField>