force-app/main/default/objects/Waiver__c/fields/User_Extension__c.field-meta.xml
<CustomField>
    <fullName>User_Extension__c</fullName>
    <formula>User_Signature__r.Extension</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Extension</label>
    <type>Text</type>
</CustomField>