force-app/main/default/objects/Waiver__c/fields/User_Signature__c.field-meta.xml
<CustomField>
    <fullName>User_Signature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Signature applied to the documents during merge. Used for waiver signing.</description>
    <label>User Signature</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Waivers1</relationshipName>
    <type>Lookup</type>
</CustomField>