force-app/main/default/objects/Waiver__c/fields/Waiver_Or_Letter_Type__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Or_Letter_Type__c</fullName>
    <description>Waiver or Letter type used to customize the letter and waiver create and edit VisualForce forms</description>
    <label>Waiver or Letter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conditional Progress Waiver</fullName>
            </value>
            <value>
                <fullName>Conditional Final Waiver</fullName>
            </value>
            <value>
                <fullName>Unconditional Progress Waiver</fullName>
            </value>
            <value>
                <fullName>Unconditional Final Waiver</fullName>
            </value>
            <value>
                <fullName>30 Day Letter</fullName>
            </value>
            <value>
                <fullName>60 Day Letter</fullName>
            </value>
            <value>
                <fullName>10 Day Letter</fullName>
            </value>
            <value>
                <fullName>Final Demand NO Mechanic Liens</fullName>
            </value>
            <value>
                <fullName>Final Demand WITH Mechanic Liens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>