force-app/main/default/objects/Waiver__c/fields/Waiver_Owner__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Owner__c</fullName>
    <description>Field to capture the Invoice Bill To Attention and allow for editing on the wavier VisualForce page.</description>
    <label>Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>