force-app/main/default/objects/Waiver__c/recordTypes/Letter.recordType-meta.xml
<RecordType>
    <fullName>Letter</fullName>
    <active>true</active>
    <description>30, 60, and 10 Day Letters</description>
    <label>Letter</label>
</RecordType>