force-app/main/default/objects/Waiver__c/recordTypes/Locked_Letter.recordType-meta.xml
<RecordType>
    <fullName>Locked_Letter</fullName>
    <active>true</active>
    <description>Record type to set all fields on the Letter page layout to be not editable, once a waiver PDF has been generated.</description>
    <label>Locked Letter</label>
</RecordType>