force-app/main/default/objects/Waiver__c/recordTypes/Locked_Waiver.recordType-meta.xml
<RecordType>
    <fullName>Locked_Waiver</fullName>
    <active>true</active>
    <description>Record type to set all fields on the Waiver page layout to be not editable, once a waiver PDF has been generated.</description>
    <label>Locked Waiver</label>
</RecordType>