force-app/main/default/objects/Waiver__c/recordTypes/Waiver.recordType-meta.xml
<RecordType>
    <fullName>Waiver</fullName>
    <active>true</active>
    <description>Unconditional and Conditional, Final and Progress Waivers</description>
    <label>Waiver</label>
</RecordType>